# tools

./: .gitignore  AGENTS.md  CHANGELOG.md  concept.md  concept2.md  tap
aiproxy/: CHANGELOG.md  README.md  aiproxy.rb  pyproject.toml  run_dev.sh
aiproxy/etc/: config.yaml  config.yaml.example  example.yaml  litellm.yaml.example
aiproxy/src/aiproxy/: cli.py  config.py  install.py  main.py  utils.py
aiproxy/src/aiproxy/share/: com.github.olafgeibig.tools.aiproxy.plist
litellm-proxy/: config.yaml  example.yaml  install.py  litellm-proxy.py  run_dev.sh
litellm-proxy/etc/: config.yaml.example
