[project]
name = "aiproxy"
version = "0.3.0"
description = "AI Proxy Server"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Olaf Geibig", email = "olaf@pobox.com" }]

dependencies = [
    "litellm[proxy]",
    "arize-phoenix-otel",
    "openinference-instrumentation-litellm",
    "uvicorn",
    "pyyaml",
    "platformdirs",
]

[project.urls]
Repository = "https://github.com/olafgeibig/tools/blob/main/aiproxy/"

[project.scripts]
aiproxy = "aiproxy.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
